manifests/paperless/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: paperless-database
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        fsGroup: 1000
      containers:
        - name: paperless
          image: "ghcr.io/paperless-ngx/paperless-ngx:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources: {}
          volumeMounts:
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: data
              mountPath: /usr/src/paperless/data
            - name: export
              mountPath: /usr/src/paperless/export
            - name: media
              mountPath: /usr/src/paperless/media
      volumes:
        - name: consume
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-consume
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-data
        - name: export
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-export
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-media
