manifests/paperless/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  labels:
    gateway: private
    app: paperless
spec:
  hostnames:
    - paperless.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: paperless
          port: 8000
