manifests/paperless/base/manifest.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-postgresql
  labels:
    app: paperless-database
spec:
  replicas: 1
  serviceName: paperless-postgresql-hl
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: paperless-database
  template:
    metadata:
      labels:
        app: paperless-database
    spec:
      containers:
        - name: postgresql
          image: "docker.io/postgres:14"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits: {}
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: paperless-database
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: 10Gi

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: paperless-database
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        fsGroup: 1000
      containers:
        - name: paperless
          image: "ghcr.io/paperless-ngx/paperless-ngx:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources: {}
          volumeMounts:
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: data
              mountPath: /usr/src/paperless/data
            - name: export
              mountPath: /usr/src/paperless/export
            - name: media
              mountPath: /usr/src/paperless/media
      volumes:
        - name: consume
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-consume
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-data
        - name: export
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-export
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-media

---
kind: Service
apiVersion: v1
metadata:
  name: paperless-postgresql-hl
  labels:
    app: paperless-database
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: paperless-database
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  selector:
    app: paperless
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  labels:
    gateway: private
    app: paperless
spec:
  hostnames:
    - paperless.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: paperless
          port: 8000
